Popups/dropdowns fixed (z-index), bottom resizing added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,11 @@ body {
 .svg-icon-bg.iconScreenNormal {
 	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 7L1 7L1 5L5 5L5 1L7 1L7 5C7 6.10457 6.10457 7 5 7Z" fill="black"/><path d="M17 5V7L13 7C11.8954 7 11 6.10457 11 5L11 1L13 1L13 5L17 5Z" fill="black"/><path d="M5 17H7L7 13C7 11.8954 6.10457 11 5 11L1 11L1 13L5 13L5 17Z" fill="black"/><path d="M13 17H11V13C11 11.8954 11.8954 11 13 11H17V13H13V17Z" fill="black"/></svg>');
 }
+
+.svg-icon-bg.iconGrabber {
+	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="26" height="5" viewBox="0 0 26 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0H2V2H0V0Z" fill="black"/><path d="M3 3H5V5H3V3Z" fill="black"/><path d="M9 3H11V5H9V3Z" fill="black"/><path d="M15 3H17V5H15V3Z" fill="black"/><path d="M21 3H23V5H21V3Z" fill="black"/><path d="M6 0H8V2H6V0Z" fill="black"/><path d="M12 0H14V2H12V0Z" fill="black"/><path d="M18 0H20V2H18V0Z" fill="black"/><path d="M24 0H26V2H24V0Z" fill="black"/></svg>');
+}
+
 .s-editor-btn.is-disabled {
 	cursor: not-allowed;
 	background: 0 0 !important;
@@ -201,4 +206,16 @@ ul[data-type="taskList"] {
 
 #editor-container {
 	margin: 200px;
+}
+
+#editor-resize-container {
+	margin-right: 0px;
+	height: 30px;
+	background-color: var(--black-050);
+	cursor: s-resize;
+	border-top: 1px solid var(--bc-darker);
+	background-image: url('data:image/svg+xml;utf-8,<svg width="26" height="5" viewBox="0 0 26 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0H2V2H0V0Z" fill="%2393999F"/><path d="M3 3H5V5H3V3Z" fill="%2393999F"/><path d="M9 3H11V5H9V3Z" fill="%2393999F"/><path d="M15 3H17V5H15V3Z" fill="%2393999F"/><path d="M21 3H23V5H21V3Z" fill="%2393999F"/><path d="M6 0H8V2H6V0Z" fill="%2393999F"/><path d="M12 0H14V2H12V0Z" fill="%2393999F"/><path d="M18 0H20V2H18V0Z" fill="%2393999F"/><path d="M24 0H26V2H24V0Z" fill="%2393999F"/></svg>');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50px;
 }
